--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 { 
-   "owner": "6282347260729",
-   "namabot": "Rimurubotz",
-   "namaowner": "Nayla",
-   "donasi": "https://i.ibb.co/FKY1h8r/qris-saya.png",
+   "owner": "6288973043481",
+   "namabot": "RilzzBotz",
+   "namaowner": "RilzZ",
+   "donasi": "https://i.ibb.co/vvDH5ND/Qris-Gopay.jpg",
    "fakereply": "BOT WHATSAPP 2022"
 }
